Set higher z-index on navbar sublinks, hopefully fixing Zine's bug of the dropdowns not displaying properly

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -44,6 +44,7 @@
   width: 150%;
   font-size: large;
   text-align: left;
+  z-index: 100;
 
   color: white;
   background-color: var(--lota-lime);
